Revision history for TAP-Parser

2.99_01 2007-09-04
        - Moved logic of prove program into App::Prove.
        - Added simple machine readable summary.
        - Performance improvement: The processing pipeline within
          TAP::Parser is now a closure which speeds up access to the
          various attribtes it needs.
        - Performance improvement: Test count spinner now updates
          exponentially less frequently as the count increases which
          saves a lot of I/O on big tests.
        - More improvements in test coverage from Leif.
        - Fixes to TAP spooling - now captures YAML blocks correctly.
        - Fix YAMLish handling of empty arrays, hashes.
        - Renamed TAP::Harness::Compatible to Test::Harness,
          runtests to prove.
        - Fixes to @INC handling. We didn't always pass the correct path
          to subprocesses.
        - We now observe any switches in HARNESS_PERL_SWITCHES.
        - Changes to output formatting for greater compatibility with
          Test::Harness 2.64.
        - Added unicode test coverage and fixed a couple of
          unicode issues.
        - Additions to documentation.
        - Added support for non-forking Perls. If forking isn't
          available we fall back to open and disable stream merging.
        - Added support for simulating non-forking Perls to improve our
          test coverage.

========================================================================
Version numbers below this point relate to TAP::Parser - which was the
name of this version of Test::Harness during its development.
========================================================================

0.54
    - Optimized I/O for common case of 'runtests -l'
    - Croak if supplied an empty (0 lines) Perl script.
    - Made T::P::Result::YAML return literal input YAML correctly.
    - Merged speed-ups from speedy branch.

0.53  18 August 2007
    - Fixed a few docs nits.